Fixes double tile save with debounce
Adds debounce to prevent double tile creation

Adds denounce to app internal

Adds media source to schema

extract common image form field handling to separate object and tracks source of images and video

Fies typo

Track media source as part of tile posted ping

Adds KPIs for tiles by media source kpi calc service

Adds fields to db

Adds tile media source to reporting

removes onboarding file

delete files

Restores previous on boarding

Adds back the original explore onboarding local file

Fixes broken onboarding
Double Tile issue
Adds tracking of tile media source to Customer Success KPIs

--- a/app/assets/stylesheets/explore/explore.css.scss
+++ b/app/assets/stylesheets/explore/explore.css.scss
@@ -331,6 +331,10 @@ body.explore, .explore {
     .carousel-cell {
       width: 100%;
     }
+    img {
+      height: 9em;
+      width: auto;
+    }
     h2 {
       margin-bottom: 0;
     }
@@ -339,7 +343,12 @@ body.explore, .explore {
       font-size: 17px;
     }
 
- 
+    @media (max-width : 480px) {
+      img {
+        height: 5em;
+        width: auto;
+      }
+    }
 
   }
   #exploreOnboardingModal {
@@ -388,17 +397,4 @@ body.explore, .explore {
   }
 
 
-}
-
-.flickity-explore-oboarding-carousel{
-  img.header-image{
-    height: 9em;
-    width: auto;
-  }
-  @media (max-width : 480px) {
-    img.header0-image {
-      height: 5em;
-      width: auto;
-    }
-  }
 }
